infra/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: games-ingress
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik

spec:
  tls:
    - hosts:
        - dino.devopsplamen.work
        - tik-tak-toe.devopsplamen.work
        - flappy-bird.devopsplamen.work
        - hangman.devopsplamen.work
        - wordle.devopsplamen.work
        - wach-a-mole.devopsplamen.work
        - dog-quiz.devopsplamen.work
        - site.devopsplamen.work
        - advanced-tik-tak-toe.devopsplamen.work
        - expense-tracker.devopsplamen.work
        - multi-ttt.devopsplamen.work
        - support.devopsplamen.work
      secretName: devopsplamen-work-tls

  rules:
    - host: dino.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dino
                port:
                  number: 80

    - host: tik-tak-toe.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tik-tak-toe
                port:
                  number: 80

    - host: flappy-bird.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: flappy-birds
                port:
                  number: 80

    - host: hangman.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hangman
                port:
                  number: 80

    - host: wordle.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordle
                port:
                  number: 80

    - host: wach-a-mole.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wach-a-mole
                port:
                  number: 80

    - host: dog-quiz.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dog-quiz
                port:
                  number: 80

    - host: site.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devops-site
                port:
                  number: 80

    - host: advanced-tik-tak-toe.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: advanced-tik-tak-toe
                port:
                  number: 80

    - host: expense-tracker.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expense-tracker
                port:
                  number: 80

    - host: multi-ttt.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: multi-ttt
                port:
                  number: 80

    - host: support.devopsplamen.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hesk
                port:
                  number: 80
